LinkedList/Output.txt
//Without reverse
Testing the Link-Based List:
isEmpty: returns 1; should be 1 (true)
Inserted one at position 1
Inserted two at position 2
Inserted three at position 3
Inserted four at position 4
Inserted five at position 5
Inserted six at position 6
The list contains
one two three four five six

isEmpty: returns 0; should be 0 (false)
getLength returns : 6; should be 6
The entry at position 4 is four; should be four
After replacing the entry at position 3 with XXX: The list contains
one two XXX four five six

//Error when implementing reverse
main.cpp: In function ‘int main()’:
main.cpp:42:12: error: ‘reverse’ was not declared in this scope
    reverse();
            ^
